Seccion 10 y swipper de la seccion 2

--- a/css/personalizado.css
+++ b/css/personalizado.css
@@ -31,13 +31,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 250px;
 }
 
 .swiper-slide img {
     display: block;
-    width: 100%;
+    width: 10%;
     height: 100%;
-    object-fit: cover;
+    margin:auto;
+    object-fit: contain;
 }
 
 .seccion1 {
@@ -104,4 +106,17 @@ footer {
     background-size: cover;
     background-position: center;
     margin-top: 0;
+}
+
+
+.seccion10 iframe{
+    height: 100%;
+    width: 100%;
+    margin-left: 0%;
+    margin-right: 0%;
+}
+
+svg{
+    width: 20px;
+    height: 20px;
 }
